# leetcode

./: .gitignore  README.md  pyproject.toml
1071-greatest-common-divisor-of-strings/: O(n**2).py  README.md  o(1).py
1431-kids-with-the-greatest-number-of-candies/: O(n).py  README.md
1480-running-sum-of-1d-array/: O(n).py  README.md
151-reverse-words-in-a-string/: O(n)_byhand.py  O(n)_trivial.py  README.md
1672-richest-customer-wealth/: O(n).py  README.md
238-product-of-array-except-self/: O(n).py  O(n**2)_fail.py  README.md
345-reverse-vowels-of-a-string/: O(n)_15ms.py  O(n)_182ms.py  O(n)_19ms.py  O(n)_7ms.py  README.md
605-can-place-flowers/: O(n)_12ms.py  O(n)_7ms.py  O(n)_80ms.py  O(n)_fail.py  README.md
scripts/: gen.py
scripts/_gen/: README.mako  errors.py  fetch.py  models.py  queries.py  write.py
