[project]
name = "leetcode"
version = "0.1.0"
description = "Project for automating logging of my LeetCode solutions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gql>=4.0.0",
    "mako>=1.3.10",
    "requests-toolbelt>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[project.scripts]
gen = "scripts.gen:main"
